<resources>
    <string name="app_name">Kuchel</string>
    <string name="dashboard_overview">Dashboard</string>
    <string name="title_recipe_list">Alle Rezepte</string>
    <string name="my_title_recipe_list">Meine Rezepte</string>
    <string name="title_recipe_detail">Rezeptdetails</string>

    <string name="myrecipes">Meine Rezepte</string>
    <string name="recipes">Alle Rezepte</string>
    <string name="dashboard">Dashboard</string>
    <string name="newrecipe">Rezept erstellen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="placeholder">Platzhalter</string>
    <string name="menu">Kuchel Menu</string>
    <string name="welcome">Willkommen bei Kuchel</string>
    <string name="welcomeImage">KuchelImage</string>
    <string name="alle_rezepte">Alle Rezepte</string>

    <string name="username">Benutzername</string>
    <string name="password">Passwort</string>

    <string name="image">Platzhalter-Bild</string>
    <string name="difficulty">Schwierigkeit</string>
    <string name="duration">Dauer</string>
    <string name="creator">Ersteller</string>

    <string name="textfield">Textfield</string>
</resources>
