<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_recipes"
            android:title="@string/recipes" />
        <item
            android:id="@+id/nav_myrecipes"
            android:title="@string/myrecipes" />
    </group>


    <item android:title="Sonstiges">
        <menu>
            <item
                android:id="@+id/placeholder1"
                android:title="Placeholder 1" />
            <item
                android:id="@+id/placeholder2"
                android:title="Placeholder 2" />
        </menu>

    </item>

</menu>
