<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recipe_detailed"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/textbackgorund"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/DurationTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/duration"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/DifficultyTitle"
                android:layout_width="361dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/difficulty"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/CreatorTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/creator"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewDuration"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textfield" />

            <TextView
                android:id="@+id/textViewDifficulty"
                android:layout_width="29dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textfield" />

            <TextView
                android:id="@+id/textViewCreator"
                android:layout_width="37dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textfield" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ingredientsView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:orientation="vertical"></LinearLayout>

    <LinearLayout
        android:id="@+id/instructionsView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"></LinearLayout>

</LinearLayout>