<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="at.kuchel.kuchelapp.RecipeListActivity">

    <!-- standard front -->

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="Kuchel_welcome_image"
        app:srcCompat="@drawable/lunch" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="91dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="250dp"
        android:fontFamily="@font/orangejuice"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse"
        android:textSize="38sp"
        android:textStyle="italic"
        app:layout_anchor="@+id/imageView"
        app:layout_anchorGravity="bottom|center" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:orientation="vertical"
        app:layout_anchor="@+id/textView"
        app:layout_anchorGravity="bottom|center">

        <Button
            android:id="@+id/button_recipes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@android:color/holo_green_light"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/recipes"
            app:layout_anchor="@+id/textView"
            app:layout_anchorGravity="bottom|center" />

        <Button
            android:id="@+id/button_myrecipes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@android:color/holo_green_light"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/myrecipes"
            app:layout_anchor="@+id/textView"
            app:layout_anchorGravity="bottom|center" />

        <Button
            android:id="@+id/button_create_recipes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@android:color/holo_green_light"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/newrecipe"
            app:layout_anchor="@+id/textView"
            app:layout_anchorGravity="bottom|center" />

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
